# fromsoftware-troubleshooter

./: .gitignore  DEVELOPMENT.md  FromSoftware Troubleshooter.spec  LICENSE  README.md  build.py  build.sh  build_appimage.sh  build_windows_cx.py  fetch_build_ids.py  fromsoftware_troubleshooter_linux.spec  fromsoftware_troubleshooter_windows.spec  game_file_sizes.json  main.py  pyproject.toml
.github/workflows/: build.yml  release.yml
fromsoftware_troubleshooter/: __init__.py  app.py  checker.py
