[project]
name = "fromsoftware-troubleshooter"
version = "1.1.0"
description = "Standalone troubleshooter for FromSoftware games"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [
    { name = "Hapfel1" }
]
keywords = ["elden-ring", "dark-souls", "fromsoftware", "troubleshooter"]
dependencies = [
    "customtkinter>=5.2",
    "pyperclip>=1.8",
    "pillow>=10.0",
]
[project.scripts]
fromsoftware-troubleshooter = "fromsoftware_troubleshooter.app:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "cx-freeze>=7.0",
    "ruff>=0.8",
]
[tool.ruff]
line-length = 88
target-version = "py313"
[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]